--- a/src/index.css
+++ b/src/index.css
@@ -72,18 +72,26 @@ html body {
   background: var(--white-100, #fff);
 }
 
-
 .credit-card {
   border-radius: 16px;
-  background: var(--button-main-primary, linear-gradient(134deg, #18A1CC 16.37%, #92D1FF 94.77%));
+  background: var(
+    --button-main-primary,
+    linear-gradient(134deg, #18a1cc 16.37%, #92d1ff 94.77%)
+  );
 }
 
 #credit-btn {
   border-radius: var(--corner-radius-80, 8px);
-  background: var(--main-secondary, #EDF8FF);
+  background: var(--main-secondary, #edf8ff);
 }
 
 #flex-center {
   display: flex;
   align-items: center;
+}
+
+#convo-header {
+  border-bottom: 1px solid var(--gray-300, #d1d5db);
+  background: var(--light-100, #fff);
+  backdrop-filter: blur(5px);
 }
