--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,25 @@ html body {
   );
   box-shadow: 0px 2px 10px 0px rgba(101, 192, 237, 0.5);
 }
+
+#cancel {
+  border-radius: var(--corner-radius-80, 8px);
+  background: var(--main-secondary, #edf8ff);
+}
+
+#cancel-text {
+  background: var(
+    --main-primary,
+    linear-gradient(134deg, #18a1cc 16.37%, #92d1ff 94.77%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#feedback {
+  border-radius: 4px;
+  width: 100%;
+  border: 1px solid var(--neutral-5, #d9d9d9);
+  background: var(--neutral-3, #f5f5f5);
+}
