feat: add ecg logo to onboarding pages

--- a/src/index.css
+++ b/src/index.css
@@ -244,3 +244,9 @@ html body {
     transform: rotate(360deg);
   }
 }
+
+.ecg-background {
+  background-image: url(/public/ECG.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
